--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@ layout: default
 title: About Me
 ---
 
-<p>ET-Jekyll theme is based off of <a href="http://www.daveliepmann.com">Dave Liepmann's</a> awesome <a href="https://edwardtufte.github.io/tufte-css/">Tufte CSS</a> - which takes its style and inspiration from the wonderful book and handout designs of <a href="https://www.edwardtufte.com/tufte/">Edward Tufte</a>.
+<p>Hi! I'm currently a junior at Zhejiang University majoring Computer Science and Technology. I'm also an honored member of the <a href="https://ckc.zju.edu.cn/ckcen">Chu Kochen Honors College</a>, <a href="http://ckc.zju.edu.cn/ckcen/2022/0225/c44633a2500659/page.htm">Mixed Class</a>.
 <span class="image_span">
     <img src="./images/default/Clinging-to-a-Scheme-Radio-Dept.gif" alt="Description of the image">
 </span>
+
 </p>
 
-<p>The differences are subtle when comparing my variation to Tufte CSS, but these changes were made out of personal preference and are not in any way "better". If you prefer the <a href="https://edwardtufte.github.io/tufte-css/">original CSS styling</a> - please use it!</p>
+<p>I have a broad interest in Artificial Intelligence, Machine Learning, and Computer Vision. My current research focuses on Trustworthy AI and ML robustness.</p>
 
 <p>For more information, check out the <a href="/et-jekyll-theme/">detailed example page!!!</a></p>
 
