Detailed contact icons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: About Me
 
 <p>I have a broad interest in Artificial Intelligence, Machine Learning, and Computer Vision. My current research focuses on Trustworthy AI and ML robustness.</p>
 
-<p></p>
+<p style="color: rgb(220, 40, 40);">I am seeking a Ph.D. position in ML and CV, starting from Fall 2025. If you are interested in my research or would like to colaborate, please feel free to reach out!</p>
 
 <p>For more information, check out the <a href="/et-jekyll-theme/">detailed example page!!!</a></p>
 
