--- a/index.html
+++ b/index.html
@@ -16,3 +16,5 @@ title: About Me
 
 <p>For more information, check out the <a href="/et-jekyll-theme/">detailed example page!!!</a></p>
 
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=ArQQuSCihWf9-xTZTX3H8qDtOnzIe0p5wDQDRqGa00s"></script>
+
