Clustrmap window adjusted

--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@ title: About Me
 
 <p>For more information, check out the <a href="/et-jekyll-theme/">detailed example page!!!</a></p>
 
+<div id="clustrmaps-widget"></div>
+
 <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=ArQQuSCihWf9-xTZTX3H8qDtOnzIe0p5wDQDRqGa00s"></script>
 
