Extend homepage content

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@ title: About Me
 
 <p>For more information, check out the <a href="/et-jekyll-theme/">detailed example page!!!</a></p>
 
+<h2>Education & Experiences</h2>
+<p>2021 - Present: Zhejiang University, Computer Science and Technology</p>
+<p>To be continued...</p>
+
+<h2>Publications</h2>
+<p>To be continued...</p>
+
+<h2>More about me...</h2>
+    <li>
+        I'm a cinephile since high school. Movies have always been one of the best ways to find inner peace, especially art house cinema. <a href="https://letterboxd.com/cnzjqz/">See more</a> about my taste in movies.
+    </li>
+
+
 {% include footer.html %}
 
 <div id="clustrmaps-widget"></div>
