Fix format problem

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@ title: About Me
 <p>To be continued...</p>
 
 <h2>More about me...</h2>
-<p></p>
+<p>
     <li>
-        I'm a cinephile since high school. Movies have always been one of the best ways to find inner peace, especially art house cinema. <a href="https://letterboxd.com/cnzjqz/">See more</a> about my taste in movies.
+        I'm a cinephile since high school. Movies have always been one of the best ways to find my inner peace, especially art house cinema. <a href="https://letterboxd.com/cnzjqz/">See more</a> about my taste in movies.
     </li>
-
+</p>
 
 {% include footer.html %}
 
