Fix format problem

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@ title: About Me
 
 <h2>More about me...</h2>
 <p>
-    <li>
-        I'm a cinephile since high school. Movies have always been one of the best ways to find my inner peace, especially art house cinema. <a href="https://letterboxd.com/cnzjqz/">See more</a> about my taste in movies.
-    </li>
+    - I'm a cinephile since high school. Movies have always been one of the best ways to find my inner peace, especially art house cinema. <a href="https://letterboxd.com/cnzjqz/">See more</a> about my taste in movies.
 </p>
 
 {% include footer.html %}
