--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@ title: About Me
 
 <h2>More about me...</h2>
 <p>
-    - I'm a cinephile since high school. Movies have always been one of the best ways to find my inner peace, especially art house cinema. <a href="https://letterboxd.com/cnzjqz/">See more</a> about my taste in movies.
+    - I'm a cinephile since high school. Movies have always been one of the best ways to find my inner peace, especially art house cinema. <a href="/my-cinematic-world/">See more</a> about my taste in movies.
 </p>
 
 <p>
     - I'm a regular book reader. I read a lot of books, mostly about philosophy, and literature. Often I'll take time to read when I'm overwhelmed with tasks as a way to maintain my state of focus. Or to escape reality when I'm in a bad mood. My favorite authors are <a href="https://en.wikipedia.org/wiki/Raymond_Carver">Raymond Carver</a>, <a href="https://en.wikipedia.org/wiki/Fyodor_Dostoevsky">Fyodor Dostoyevskiy</a> and <a href="https://en.wikipedia.org/wiki/Albert_Camus">Albert Camus</a>.
-     <a href="https://www.goodreads.com/user/show/131682682-hanz">See more</a> about my reading list.
+     <a href="/what-we-talk-about-when-we-talk-about-books/">See more</a> about my reading list.
 </p>
 
 <p>
-    - I have multiple preferences in music. Apart from pop music and hip-hop, I also enjoy post-punk, shoegaze, dream pop and indie rock music. My favorite bands are <a href="https://en.wikipedia.org/wiki/The_Radio_Department">The Radio Dept.</a>, <a href="https://en.wikipedia.org/wiki/My_Bloody_Valentine_(band)">My Bloody Valentine</a>, and <a href="https://en.wikipedia.org/wiki/The_1975">The 1975</a>.<a href="https://www.last.fm/user/cnzjqz">See more</a> about my music preference.
+    - I have multiple preferences in music. Apart from pop music and hip-hop, I also enjoy post-punk, shoegaze, dream pop and indie rock music. My favorite bands are <a href="https://en.wikipedia.org/wiki/The_Radio_Department">The Radio Dept.</a>, <a href="https://en.wikipedia.org/wiki/My_Bloody_Valentine_(band)">My Bloody Valentine</a>, and <a href="https://en.wikipedia.org/wiki/The_1975">The 1975</a>. <a href=/"music-loop/">See more</a> about my music preference.
 </p>
 
 <p>
