--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: About Me
 </p>
 
 <p>
-    - I have multiple preferences in music. Apart from pop music and hip-hop, I also enjoy post-punk, shoegaze, dream pop and indie rock music. My favorite bands are <a href="https://en.wikipedia.org/wiki/The_Radio_Department">The Radio Dept.</a>, <a href="https://en.wikipedia.org/wiki/My_Bloody_Valentine_(band)">My Bloody Valentine</a>, and <a href="https://en.wikipedia.org/wiki/The_1975">The 1975</a>. <a href=/"music-loop/">See more</a> about my music preference.
+    - I have multiple preferences in music. Apart from pop music and hip-hop, I also enjoy post-punk, shoegaze, dream pop and indie rock music. My favorite bands are <a href="https://en.wikipedia.org/wiki/The_Radio_Department">The Radio Dept.</a>, <a href="https://en.wikipedia.org/wiki/My_Bloody_Valentine_(band)">My Bloody Valentine</a>, and <a href="https://en.wikipedia.org/wiki/The_1975">The 1975</a>. <a href="/music-loop/">See more</a> about my music preference.
 </p>
 
 <p>
