--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@ title: About Me
 
 <p style="color: rgb(220, 40, 40);">I am seeking a Ph.D. position in ML and CV, starting from Fall 2025. If you are interested in my research or would like to colaborate, please feel free to reach out!</p>
 
-<p>For more information, check out the <a href="/et-jekyll-theme/">detailed example page!!!</a></p>
+<!-- <p>For more information, check out the <a href="/et-jekyll-theme/">detailed example page!!!</a></p> -->
 
 <h2>Education & Experiences</h2>
-<p>2021 - Present: Zhejiang University, Computer Science and Technology</p>
+<p>09.2021 - Present: Zhejiang University, major in Computer Science and Technology</p>
+<p>07.2022 - 08.2022: Oxford University, course exchange</p>
+<p>06.2024 - Present: Michigan State University, research intern</p>
 <p>To be continued...</p>
 
 <h2>Publications</h2>
+<p>Zeng, Q., Song, J., **Zheng, H**., Jiang, H., Song, M. D²-DPM: Dual Denoising for Quantized Diffusion Probabilistic Models. Submitted to AAAI 2025.</p>
 <p>To be continued...</p>
 
 <h2>More about me...</h2>
