--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: About Me
 
 <p>Hi! I'm currently a junior at Zhejiang University majoring Computer Science and Technology. I'm also an honored member of the <a href="https://ckc.zju.edu.cn/ckcen">Chu Kochen Honors College</a>, <a href="http://ckc.zju.edu.cn/ckcen/2022/0225/c44633a2500659/page.htm">Mixed Class</a>.
 <span class="image_span">
-    <img src="./images/default/Clinging-to-a-Scheme-Radio-Dept.gif" alt="Description of the image">
+    <img src="./images/default/han.png" alt="Description of the image">
 </span>
 
 </p>
@@ -23,7 +23,7 @@ title: About Me
 <p>To be continued...</p>
 
 <h2>Publications</h2>
-<p>Zeng, Q., Song, J., **Zheng, H**., Jiang, H., Song, M. D²-DPM: Dual Denoising for Quantized Diffusion Probabilistic Models. Submitted to AAAI 2025.</p>
+<p>Zeng, Q., Song, J., <b>Zheng, H.</b>, Jiang, H., Song, M. <i>D²-DPM: Dual Denoising for Quantized Diffusion Probabilistic Models. Submitted to AAAI 2025.</i></p>
 <p>To be continued...</p>
 
 <h2>More about me...</h2>
