--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: About Me
 <p>To be continued...</p>
 
 <h2>Publications</h2>
-<p>Zeng, Q., Song, J., <b>Zheng, H.</b>, Jiang, H., Song, M. <i>D²-DPM: Dual Denoising for Quantized Diffusion Probabilistic Models. Submitted to AAAI 2025.</i></p>
+<p>Zeng, Q., Song, J., <b>Zheng, H.</b>, Jiang, H., Song, M. <br /><i>D²-DPM: Dual Denoising for Quantized Diffusion Probabilistic Models. Submitted to AAAI 2025.</i></p>
 <p>To be continued...</p>
 
 <h2>More about me...</h2>
